tests/snapshots/generate_plan_tests__rust_rocket_no_musl.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "nixpacksVersion": "[version]",
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_NO_MUSL": "1",
    "ROCKET_ADDRESS": "0.0.0.0"
  },
  "staticAssets": {},
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "gcc"
        },
        {
          "name": "rust-bin.stable.latest.default",
          "overlay": "https://github.com/oxalica/rust-overlay/archive/master.tar.gz"
        }
      ],
      "nixLibraries": [],
      "aptPackages": [
        "binutils"
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "commands": [
        "cargo build --release",
        "cp target/release/rocket rocket"
      ],
      "cacheDirectories": [
        "/root/.cargo/git",
        "/root/.cargo/registry",
        "target"
      ]
    }
  ],
  "startPhase": {
    "cmd": "./rocket"
  }
}
