tests/snapshots/generate_plan_tests__swift.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "providers": [],
  "buildImage": "[build_image]",
  "variables": {
    "NIXPACKS_METADATA": "swift"
  },
  "phases": {
    "build": {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cmds": [
        "CC=clang++ swift build -c release --static-swift-stdlib",
        "cp ./.build/release/swift ./swift && rm -rf ./.build"
      ]
    },
    "install": {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "cmds": [
        "swift package resolve"
      ],
      "onlyIncludeFiles": [
        "Package.swift"
      ]
    },
    "setup": {
      "name": "setup",
      "nixPkgs": [
        "coreutils",
        "swift",
        "clang",
        "zlib",
        "zlib.dev"
      ],
      "nixOverlays": [],
      "nixpacksArchive": "[archive]"
    }
  },
  "start": {
    "cmd": "./swift"
  }
}
