tests/snapshots/generate_plan_tests__yarn.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "version": "[version]",
  "setup": {
    "pkgs": [
      {
        "name": "nodejs"
      },
      {
        "name": "yarn-1_x",
        "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
      }
    ],
    "libraries": [],
    "apt_pkgs": [],
    "baseImage": "[baseImage]"
  },
  "install": {
    "cmds": [
      "yarn install --frozen-lockfile"
    ],
    "cacheDirectories": [
      "/usr/local/share/.cache/yarn/v6"
    ]
  },
  "build": {
    "cmds": [
      "yarn run build"
    ],
    "cacheDirectories": [
      "node_modules/.cache"
    ]
  },
  "start": {
    "cmd": "yarn run start"
  },
  "variables": {
    "CI": "true",
    "NIXPACKS_BUILDER": "node",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "static_assets": {}
}
