tests/snapshots/generate_plan_tests__yarn_custom_version.snap
---
source: tests/generate_plan_tests.rs
expression: plan
---
{
  "variables": {
    "CI": "true",
    "NODE_ENV": "production",
    "NPM_CONFIG_PRODUCTION": "false"
  },
  "phases": [
    {
      "name": "setup",
      "nixPackages": [
        {
          "name": "nodejs-14_x"
        },
        {
          "name": "yarn-1_x",
          "overlay": "https://github.com/railwayapp/nix-npm-overlay/archive/main.tar.gz"
        }
      ]
    },
    {
      "name": "install",
      "dependsOn": [
        "setup"
      ],
      "commands": [
        "yarn install --frozen-lockfile"
      ],
      "cacheDirectories": [
        "/usr/local/share/.cache/yarn/v6"
      ]
    },
    {
      "name": "build",
      "dependsOn": [
        "install"
      ],
      "cacheDirectories": [
        "node_modules/.cache"
      ]
    }
  ],
  "startPhase": {
    "cmd": "yarn run start"
  }
}
